Clean POM